# tf-disco

./: .env  .gitignore  Dockerfile  Dockerfile.autoupdate  LICENSE  README.md  app.py  app_data_loading.py  app_graph.py  app_helper.py  app_sidebar.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
.streamlit/: config.toml
app/: about.py  about_help.py  home.py  pattern_explorer.py  tf_browser.py  tf_compare.py  tf_view.py
app/utils/: align_logo.py  constants.py  data_loading.py  graph.py  helper.py  patterns.py  sidebar.py
pages/: about.py  home.py  pattern_explorer.py  tf_browser.py  tf_compare.py  tf_view.py
