[project]
name = "tf-disco"
version = "0.6.9"
description = "TF-DISCO: A Consolidated database of Disorder, Patterns and Functional annotations of Human Transcription Factors"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "streamlit==1.58.0",
    "plotly==6.8.0",

    "numpy==2.5.0",
    "pandas==3.0.3",
    "matplotlib==3.11.0",
    "biopython==1.87",
    "pillow==12.2.0",

    "kagglehub==1.0.2",
    "python-dotenv==1.2.2",
]
